--- a/src/app/login-register/login-register.component.scss
+++ b/src/app/login-register/login-register.component.scss
@@ -11,3 +11,15 @@
 .login_form{
     padding: 40px;
 }
+.hideShow{
+    position: absolute;
+    top: 0;
+    border-radius: 5px;
+    right: 5px;
+    z-index: 2;
+    border: none;
+    top: 15px;
+    height: 30px;
+    background-color: white;
+    
+}
