--- a/src/app/profile/about/about.component.html
+++ b/src/app/profile/about/about.component.html
@@ -3,7 +3,7 @@
       <div class="card" data-aos="fade-up" data-aos-offset="10">
         <div class="row">
           <div class="col-lg-6 col-md-12">
-            <img src="assets/images/about.jpg" alt="aboutimg">
+            <img src="assets/images/about-me.jpg" alt="aboutimg" style="padding: 25px;">
 
           </div>
           <div class="col-lg-6 col-md-12">
