--- a/src/app/profile/intro/intro.component.html
+++ b/src/app/profile/intro/intro.component.html
@@ -1,7 +1,7 @@
 <div class="profile-page">
   <div class="wrapper">
     <div class="page-header page-header-small" filter-color="green">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('assets/images/intro.jpg');">
+      <div class="page-header-image" data-parallax="true" style="background-image: url('assets/images/intros.avif');">
       </div>
       <div class="container">
         <div class="content-center">
@@ -12,13 +12,14 @@
           </div>
           <h1 class="h2 title">Debasish patra</h1>
           <!-- <p class="category text-white">Software Developer</p> -->
-          <p class="category text-white">{{'IAmDeveloper'}} <span class="typed" style="color: aqua;"></span></p>
+          <p class="category text-white"style="margin-top:10px;">{{'IAmDeveloper'}} <span class="typed" style="color: aqua;"></span></p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
             data-aos-anchor="data-aos-anchor">Hire Me</a>
           <a class="btn btn-primary" href={{cvUrl}} target="_blank" data-aos="zoom-in"
             data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
+      <br><br>
       <div class="section">
         <div class="container">
           <div class="button-container">
