--- a/src/app/profile/intro/intro.component.html
+++ b/src/app/profile/intro/intro.component.html
@@ -13,8 +13,8 @@
           <h1 class="h2 title">Debasish patra</h1>
           <!-- <p class="category text-white">Software Developer</p> -->
           <p class="category text-white"style="margin-top:10px;">{{'IAmDeveloper'}} <span class="typed" style="color: aqua;"></span></p>
-          <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
-            data-aos-anchor="data-aos-anchor">Hire Me</a>
+          <a class="btn btn-primary smooth-scroll mr-2" data-aos="zoom-in"
+            data-aos-anchor="data-aos-anchor" (click)="contact()">Hire Me</a>
           <a class="btn btn-primary" href={{cvUrl}} target="_blank" data-aos="zoom-in"
             data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
