--- a/src/app/login-register/login-register.component.html
+++ b/src/app/login-register/login-register.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
             <div class="container-fluid">
-                <a class="navbar-brand" routerLink="../profile" style="color: black;">Welcome To Debasish's PROFILE</a>
+                <a class="navbar-brand" routerLink="../profile" style="color: black;text-shadow: 5px 5px 10px blue">Welcome To Debasish's PROFILE</a>
             </div>
         </nav>
     </div>
